--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,699 @@
-.App {
-  text-align: center;
+.main-dashboard {
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main-dashboard .overlap-wrapper {
+    background-color: #ffffff;
+    height: 1175px;
+    overflow: hidden;
+    width: 1440px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main-dashboard .overlap {
+    height: 1184px;
+    position: relative;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.main-dashboard .overlap-group {
+    background-color: #f4f6f9;
+    height: 1083px;
+    left: 250px;
+    position: absolute;
+    top: 101px;
+    width: 1190px;
 }
 
-.App-link {
-  color: #61dafb;
+.main-dashboard .weekly-activity {
+    height: 367px;
+    left: 40px;
+    position: absolute;
+    top: 330px;
+    width: 732px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-dashboard .text-wrapper {
+    color: #343c6a;
+    font-family: "Inter-SemiBold", Helvetica;
+    font-size: 22px;
+    font-weight: 600;
+    left: 0;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    top: 0;
+}
+
+.main-dashboard .group {
+    height: 322px;
+    left: 0;
+    position: absolute;
+    top: 45px;
+    width: 730px;
+}
+
+.main-dashboard .expense-stats {
+    height: 367px;
+    left: 800px;
+    position: absolute;
+    top: 330px;
+    width: 352px;
+}
+
+.main-dashboard .img {
+    height: 322px;
+    left: 0;
+    position: absolute;
+    top: 45px;
+    width: 350px;
+}
+
+.main-dashboard .recent-transaction {
+    height: 282px;
+    left: 800px;
+    position: absolute;
+    top: 24px;
+    width: 352px;
+}
+
+.main-dashboard .group-2 {
+    height: 235px;
+    left: 0;
+    position: absolute;
+    top: 47px;
+    width: 350px;
+}
+
+.main-dashboard .quick-transfer {
+    height: 323px;
+    left: 40px;
+    position: absolute;
+    top: 721px;
+    width: 447px;
+}
+
+.main-dashboard .group-3 {
+    height: 276px;
+    left: 0;
+    position: absolute;
+    top: 47px;
+    width: 445px;
+}
+
+.main-dashboard .balance-history {
+    height: 323px;
+    left: 515px;
+    position: absolute;
+    top: 721px;
+    width: 637px;
+}
+
+.main-dashboard .group-4 {
+    height: 276px;
+    left: 0;
+    position: absolute;
+    top: 47px;
+    width: 635px;
+}
+
+.main-dashboard .my-cards {
+    height: 282px;
+    left: 40px;
+    position: absolute;
+    top: 24px;
+    width: 734px;
+}
+
+.main-dashboard .div {
+    color: #343c6a;
+    font-family: var(--heading-two-semibold-22p-font-family);
+    font-size: var(--heading-two-semibold-22p-font-size);
+    font-style: var(--heading-two-semibold-22p-font-style);
+    font-weight: var(--heading-two-semibold-22p-font-weight);
+    left: 0;
+    letter-spacing: var(--heading-two-semibold-22p-letter-spacing);
+    line-height: var(--heading-two-semibold-22p-line-height);
+    position: absolute;
+    top: 0;
+}
+
+.main-dashboard .group-5 {
+    background-color: #ffffff;
+    border: 1px solid;
+    border-color: #deeaf2;
+    border-radius: 25px;
+    height: 235px;
+    left: 380px;
+    position: absolute;
+    top: 47px;
+    width: 350px;
+}
+
+.main-dashboard .group-wrapper {
+    border: 1px solid;
+    border-color: #dfeaf2;
+    border-radius: 0px 0px 25px 25px;
+    height: 70px;
+    left: 0;
+    position: absolute;
+    top: 165px;
+    width: 350px;
+}
+
+.main-dashboard .group-6 {
+    height: 30px;
+    left: 25px;
+    position: relative;
+    top: 19px;
+    width: 302px;
+}
+
+.main-dashboard .text-wrapper-2 {
+    color: #343c6a;
+    font-family: "Lato-Semibold", Helvetica;
+    font-size: 22px;
+    font-weight: 400;
+    left: 0;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    top: 2px;
+    white-space: nowrap;
+}
+
+.main-dashboard .overlap-group-wrapper {
+    height: 30px;
+    left: 256px;
+    position: absolute;
+    top: 0;
+    width: 44px;
+}
+
+.main-dashboard .overlap-group-2 {
+    height: 30px;
+    position: relative;
+}
+
+.main-dashboard .ellipse {
+    background-color: #9198af80;
+    border-radius: 15px;
+    height: 30px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 30px;
+}
+
+.main-dashboard .ellipse-2 {
+    background-color: #9198af80;
+    border-radius: 15px;
+    height: 30px;
+    left: 14px;
+    position: absolute;
+    top: 0;
+    width: 30px;
+}
+
+.main-dashboard .number-day-month {
+    height: 35px;
+    left: 182px;
+    position: absolute;
+    top: 90px;
+    width: 74px;
+}
+
+.main-dashboard .text-wrapper-3 {
+    color: #718ebf;
+    font-family: "Lato-Regular", Helvetica;
+    font-size: 12px;
+    font-weight: 400;
+    left: 0;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    text-shadow: 0.28px 0.56px 0.56px #00000080;
+    top: 0;
+    white-space: nowrap;
+}
+
+.main-dashboard .text-wrapper-4 {
+    color: #343c6a;
+    font-family: "Lato-Semibold", Helvetica;
+    font-size: 15px;
+    font-weight: 400;
+    left: 0;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    text-shadow: 0.28px 0.56px 0.56px #00000040;
+    top: 17px;
+    white-space: nowrap;
+}
+
+.main-dashboard .card-name {
+    height: 35px;
+    left: 25px;
+    position: absolute;
+    top: 90px;
+    width: 94px;
+}
+
+.main-dashboard .blance {
+    height: 38px;
+    left: 25px;
+    position: absolute;
+    top: 23px;
+    width: 67px;
+}
+
+.main-dashboard .text-wrapper-5 {
+    color: #718ebf;
+    font-family: "Lato-Regular", Helvetica;
+    font-size: 12px;
+    font-weight: 400;
+    left: 0;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    top: 0;
+    white-space: nowrap;
+}
+
+.main-dashboard .text-wrapper-6 {
+    color: #343c6a;
+    font-family: "Lato-Semibold", Helvetica;
+    font-size: 20px;
+    font-weight: 400;
+    left: 0;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    top: 14px;
+    white-space: nowrap;
+}
+
+.main-dashboard .chip-card {
+    height: 35px;
+    left: 290px;
+    object-fit: cover;
+    position: absolute;
+    top: 24px;
+    width: 35px;
+}
+
+.main-dashboard .text-wrapper-7 {
+    color: #343c6a;
+    font-family: "Inter-SemiBold", Helvetica;
+    font-size: 17px;
+    font-weight: 600;
+    left: 666px;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    text-align: right;
+    top: 5px;
+}
+
+.main-dashboard .overlap-2 {
+    height: 1184px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 1440px;
+}
+
+.main-dashboard .header {
+    background-color: transparent;
+    height: 101px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 1440px;
+}
+
+.main-dashboard .div-wrapper {
+    background-color: #ffffff;
+    height: 100px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 1440px;
+}
+
+.main-dashboard .group-7 {
+    height: 60px;
+    left: 38px;
+    position: relative;
+    top: 20px;
+    width: 1362px;
+}
+
+.main-dashboard .group-8 {
+    height: 60px;
+    left: 252px;
+    position: absolute;
+    top: 0;
+    width: 1112px;
+}
+
+.main-dashboard .mask-group {
+    height: 60px;
+    left: 1050px;
+    position: absolute;
+    top: 0;
+    width: 60px;
+}
+
+.main-dashboard .settings-wrapper {
+    background-color: #f4f6f9;
+    border-radius: 25px;
+    height: 50px;
+    left: 885px;
+    position: absolute;
+    top: 5px;
+    width: 50px;
+}
+
+.main-dashboard .settings {
+    height: 25px;
+    left: 12px;
+    position: absolute;
+    top: 12px;
+    width: 25px;
+}
+
+.main-dashboard .element-notification-wrapper {
+    background-color: #f4f6f9;
+    border-radius: 25px;
+    height: 50px;
+    left: 965px;
+    position: absolute;
+    top: 5px;
+    width: 50px;
+}
+
+.main-dashboard .element-notification {
+    height: 25px;
+    left: 13px;
+    position: absolute;
+    top: 12px;
+    width: 25px;
+}
+
+.main-dashboard .text-wrapper-8 {
+    color: var(--primary-2);
+    font-family: var(--heading-one-semibold-28p-font-family);
+    font-size: var(--heading-one-semibold-28p-font-size);
+    font-style: var(--heading-one-semibold-28p-font-style);
+    font-weight: var(--heading-one-semibold-28p-font-weight);
+    left: 0;
+    letter-spacing: var(--heading-one-semibold-28p-letter-spacing);
+    line-height: var(--heading-one-semibold-28p-line-height);
+    position: absolute;
+    top: 13px;
+}
+
+.main-dashboard .group-9 {
+    height: 50px;
+    left: 600px;
+    position: absolute;
+    top: 5px;
+    width: 257px;
+}
+
+.main-dashboard .overlap-group-3 {
+    background-color: #f4f6f9;
+    border-radius: 40px;
+    height: 50px;
+    position: relative;
+    width: 255px;
+}
+
+.main-dashboard .magnifying-glass {
+    height: 20px;
+    left: 25px;
+    position: absolute;
+    top: 15px;
+    width: 20px;
+}
+
+.main-dashboard .text-wrapper-9 {
+    color: #8ba3cb;
+    font-family: "Inter-Regular", Helvetica;
+    font-size: 15px;
+    font-weight: 400;
+    left: 60px;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    top: 16px;
+    white-space: nowrap;
+}
+
+.main-dashboard .logo {
+    height: 36px;
+    left: 0;
+    position: absolute;
+    top: 11px;
+    width: 185px;
+}
+
+.main-dashboard .iconfinder-vector {
+    background-image: url(./iconfinder-vector-65-09-473792-1.png);
+    background-position: 50% 50%;
+    background-size: cover;
+    height: 36px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 36px;
+}
+
+.main-dashboard .TU-planner {
+    color: var(--primary-2);
+    font-family: "Mont-HeavyDEMO", Helvetica;
+    font-size: 25px;
+    font-weight: 400;
+    left: 45px;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    top: 4px;
+}
+
+.main-dashboard .rectangle {
+    background-color: #e5eef4;
+    height: 1px;
+    left: 250px;
+    position: absolute;
+    top: 100px;
+    width: 1190px;
+}
+
+.main-dashboard .sidebar-menu {
+    height: 1184px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    transition: all 0.2s ease;
+    width: 250px;
+}
+
+.main-dashboard .group-10 {
+    height: 492px;
+    left: 0;
+    position: absolute;
+    top: 114px;
+    width: 203px;
+}
+
+.main-dashboard .service {
+    height: 25px;
+    left: 43px;
+    position: absolute;
+    top: 401px;
+    width: 25px;
+}
+
+.main-dashboard .settings-solid {
+    height: 25px;
+    left: 43px;
+    position: absolute;
+    top: 467px;
+    width: 25px;
+}
+
+.main-dashboard .credit-card {
+    height: 26px;
+    left: 43px;
+    position: absolute;
+    top: 273px;
+    width: 26px;
+}
+
+.main-dashboard .economic-investment {
+    height: 25px;
+    left: 44px;
+    position: absolute;
+    top: 209px;
+    width: 25px;
+}
+
+.main-dashboard .transfer {
+    height: 25px;
+    left: 44px;
+    position: absolute;
+    top: 81px;
+    width: 25px;
+}
+
+.main-dashboard .loan {
+    height: 25px;
+    left: 43px;
+    position: absolute;
+    top: 338px;
+    width: 25px;
+}
+
+.main-dashboard .text-wrapper-10 {
+    color: #b1b1b1;
+    font-family: var(--heading-three-medium-18p-font-family);
+    font-size: var(--heading-three-medium-18p-font-size);
+    font-style: var(--heading-three-medium-18p-font-style);
+    font-weight: var(--heading-three-medium-18p-font-weight);
+    left: 95px;
+    letter-spacing: var(--heading-three-medium-18p-letter-spacing);
+    line-height: var(--heading-three-medium-18p-line-height);
+    position: absolute;
+    top: 83px;
+}
+
+.main-dashboard .text-wrapper-11 {
+    color: #b1b1b1;
+    font-family: "Inter-Medium", Helvetica;
+    font-size: 18px;
+    font-weight: 500;
+    left: 95px;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    top: 147px;
+}
+
+.main-dashboard .text-wrapper-12 {
+    color: #b1b1b1;
+    font-family: "Inter-Medium", Helvetica;
+    font-size: 18px;
+    font-weight: 500;
+    left: 95px;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    top: 211px;
+}
+
+.main-dashboard .text-wrapper-13 {
+    color: #b1b1b1;
+    font-family: "Inter-Medium", Helvetica;
+    font-size: 18px;
+    font-weight: 500;
+    left: 95px;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    top: 275px;
+}
+
+.main-dashboard .text-wrapper-14 {
+    color: #b1b1b1;
+    font-family: "Inter-Medium", Helvetica;
+    font-size: 18px;
+    font-weight: 500;
+    left: 95px;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    top: 339px;
+}
+
+.main-dashboard .text-wrapper-15 {
+    color: #b1b1b1;
+    font-family: "Inter-Medium", Helvetica;
+    font-size: 18px;
+    font-weight: 500;
+    left: 95px;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    top: 403px;
+}
+
+.main-dashboard .text-wrapper-16 {
+    color: #b1b1b1;
+    font-family: "Inter-Medium", Helvetica;
+    font-size: 18px;
+    font-weight: 500;
+    left: 95px;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    top: 467px;
+}
+
+.main-dashboard .user {
+    height: 25px;
+    left: 44px;
+    position: absolute;
+    top: 146px;
+    width: 25px;
+}
+
+.main-dashboard .group-11 {
+    height: 60px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 191px;
+}
+
+.main-dashboard .home {
+    height: 25px;
+    left: 44px;
+    position: absolute;
+    top: 17px;
+    width: 25px;
+}
+
+.main-dashboard .text-wrapper-17 {
+    color: var(--primary-3);
+    font-family: "Inter-Medium", Helvetica;
+    font-size: 18px;
+    font-weight: 500;
+    left: 95px;
+    letter-spacing: 0;
+    line-height: normal;
+    position: absolute;
+    top: 19px;
+}
+
+.main-dashboard .rectangle-2 {
+    background-color: var(--primary-3);
+    border-radius: 0px 10px 10px 0px;
+    height: 60px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 6px;
+}
+
+.main-dashboard .rectangle-3 {
+    background-color: #e6eff5;
+    height: 1184px;
+    left: 249px;
+    position: absolute;
+    top: 0;
+    width: 1px;
 }
